antlr4_grammar_check_cpp/src/WatParser.cpp

// Generated from WatParser.g4 by ANTLR 4.13.1


#include "WatParserListener.h"
#include "WatParserVisitor.h"

#include "WatParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct WatParserStaticData final {
  WatParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  WatParserStaticData(const WatParserStaticData&) = delete;
  WatParserStaticData(WatParserStaticData&&) = delete;
  WatParserStaticData& operator=(const WatParserStaticData&) = delete;
  WatParserStaticData& operator=(WatParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag watparserParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
WatParserStaticData *watparserParserStaticData = nullptr;

void watparserParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (watparserParserStaticData != nullptr) {
    return;
  }
#else
  assert(watparserParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<WatParserStaticData>(
    std::vector<std::string>{
      "value", "name", "null_opt", "heap_type", "ref_type", "val_type", 
      "global_type", "storage_type", "field_type", "struct_type", "array_type", 
      "func_type", "str_type", "sub_type", "table_type", "memory_type", 
      "type_use", "nat32", "num", "var_", "bind_var", "instr_list", "instr", 
      "plain_instr", "select_instr_instr_list", "call_instr_instr_list", 
      "call_instr_type_instr_list", "block_instr", "block", "block_param_body", 
      "handler_block", "handler_block_param_body", "handler_block_body", 
      "expr", "select_expr_results", "call_expr_type", "call_expr_params", 
      "call_expr_results", "if_block", "if_block_result_body", "try_block", 
      "try_block_param_body", "try_block_handler_body", "const_expr", "func_", 
      "func_fields", "func_fields_import", "func_fields_import_result", 
      "func_fields_body", "func_result_body", "func_body", "table_use", 
      "memory_use", "offset", "elem_kind", "elem_expr", "elem_list", "elem", 
      "table", "table_fields", "data", "memory", "memory_fields", "tag", 
      "tag_fields", "tag_fields_import", "tag_fields_import_result", "sglobal", 
      "global_fields", "import_desc", "simport", "inline_import", "export_desc", 
      "export_", "inline_export", "type_def", "rec_type", "type_", "start_", 
      "module_field", "module_", "inline_module", "script_module", "action_", 
      "assertion", "cmd", "shared_cmd_list", "meta", "literal_num", "literal_vec", 
      "literal_ref", "literal", "literal_list", "numpat", "result", "script", 
      "module"
    },
    std::vector<std::string>{
      "", "'('", "')'", "", "", "", "", "", "", "", "", "", "", "'any'", 
      "'anyref'", "'none'", "'nullref'", "'eq'", "'eqref'", "'i31'", "'i31ref'", 
      "'structref'", "'arrayref'", "'nofunc'", "'funcref'", "'mut'", "'shared'", 
      "'nullfuncref'", "'extern'", "'noextern'", "'externref'", "'nullexternref'", 
      "'ref'", "'null'", "'exn'", "'exnref'", "'array'", "'struct'", "'field'", 
      "'sub'", "'final'", "'rec'", "'ref.null'", "'ref.func'", "'ref.struct'", 
      "'ref.array'", "'ref.host'", "'ref.extern'", "'ref.is_null'", "'ref.as_non_null'", 
      "'ref.test'", "'ref.cast'", "'ref.eq'", "'ref.i31'", "'ref.exn'", 
      "'try_table'", "'catch'", "'catch_ref'", "'catch_all'", "'catch_all_ref'", 
      "'throw'", "'throw_ref'", "", "", "", "'struct.set'", "", "'array.new_fixed'", 
      "'array.new_elem'", "'array.new_data'", "", "'array.set'", "'array.len'", 
      "'array.copy'", "'array.fill'", "'array.init_data'", "'array.init_elem'", 
      "", "'memory.atomic.notify'", "", "'atomic.fence'", "", "", "", "", 
      "'nop'", "'unreachable'", "'drop'", "'block'", "'loop'", "'end'", 
      "'br'", "'br_if'", "'br_table'", "'return'", "'if'", "'then'", "'else'", 
      "'select'", "'call'", "'call_indirect'", "'call_ref'", "'return_call'", 
      "'return_call_ref'", "'return_call_indirect'", "", "", "'local.get'", 
      "'local.set'", "'local.tee'", "'global.get'", "'global.set'", "'table_get'", 
      "'table_set'", "'table_size'", "'table_grow'", "'table_fill'", "'table_copy'", 
      "'table_init'", "'data.drop'", "'elem.drop'", "", "", "", "", "", 
      "", "", "", "", "", "'v128.store'", "", "", "", "", "", "", "", "", 
      "'i8x16.shuffle'", "", "", "", "'memory.size'", "'memory.grow'", "'memory.fill'", 
      "'memory.copy'", "'memory.init'", "'type'", "'func'", "'start'", "'param'", 
      "'result'", "'local'", "'global'", "'table'", "'memory'", "'elem'", 
      "'data'", "'offset'", "'import'", "'export'", "'declare'", "'item'", 
      "'tag'", "'module'", "'binary'", "'quote'", "'either'", "'thread'", 
      "'wait'", "'script'", "'register'", "'invoke'", "'get'", "'assert_malformed'", 
      "'assert_invalid'", "'assert_unlinkable'", "'assert_return'", "'assert_exception'", 
      "'assert_trap'", "'assert_exhaustion'", "'input'", "'output'"
    },
    std::vector<std::string>{
      "", "LPAR", "RPAR", "NAT", "INT", "FLOAT", "STRING_", "NUM_TYPE", 
      "PACK_TYPE", "VEC_TYPE", "VEC_SHAPE", "CONST", "VEC_CONST", "ANY", 
      "ANYREF", "NONE", "NULLREF", "EQ", "EQREF", "I31", "I31REF", "STRUCTREF", 
      "ARRAYREF", "NOFUNC", "FUNCREF", "MUT", "SHARED", "NULLFUNCREF", "EXTERN", 
      "NOEXTERN", "EXTERNREF", "NULLEXTERNREF", "REF", "NULL", "EXN", "EXNREF", 
      "ARRAY", "STRUCT", "FIELD", "SUB", "FINAL", "REC", "REF_NULL", "REF_FUNC", 
      "REF_STRUCT", "REF_ARRAY", "REF_HOST", "REF_EXTERN", "REF_IS_NULL", 
      "REF_AS_NON_NULL", "REF_TEST", "REF_CAST", "REF_EQ", "REF_I31", "REF_EXN", 
      "TRY_TABLE", "CATCH", "CATCH_REF", "CATCH_ALL", "CATCH_ALL_REF", "THROW", 
      "THROW_REF", "I31_GET", "STRUCT_NEW", "STRUCT_GET", "STRUCT_SET", 
      "ARRAY_NEW", "ARRAY_NEW_FIXED", "ARRAY_NEW_ELEM", "ARRAY_NEW_DATA", 
      "ARRAY_GET", "ARRAY_SET", "ARRAY_LEN", "ARRAY_COPY", "ARRAY_FILL", 
      "ARRAY_INIT_DATA", "ARRAY_INIT_ELEM", "EXTERN_CONVERT", "MEMORY_ATOMIC_NOTIFY", 
      "MEMORY_ATOMIC_WAIT", "ATOMIC_FENCE", "ATOMIC_LOAD", "ATOMIC_STORE", 
      "ATOMIC_RMW", "ATOMIC_RMW_CMPXCHG", "NOP", "UNREACHABLE", "DROP", 
      "BLOCK", "LOOP", "END", "BR", "BR_IF", "BR_TABLE", "RETURN", "IF", 
      "THEN", "ELSE", "SELECT", "CALL", "CALL_INDIRECT", "CALL_REF", "RETURN_CALL", 
      "RETURN_CALL_REF", "RETURN_CALL_INDIRECT", "BR_ON_NULL", "BR_ON_CAST", 
      "LOCAL_GET", "LOCAL_SET", "LOCAL_TEE", "GLOBAL_GET", "GLOBAL_SET", 
      "TABLE_GET", "TABLE_SET", "TABLE_SIZE", "TABLE_GROW", "TABLE_FILL", 
      "TABLE_COPY", "TABLE_INIT", "DATA_DROP", "ELEM_DROP", "LOAD", "STORE", 
      "OFFSET_EQ_NAT", "ALIGN_EQ_NAT", "UNARY", "BINARY", "TEST", "COMPARE", 
      "CONVERT", "VEC_LOAD", "VEC_STORE", "VEC_LOAD_LANE", "VEC_STORE_LANE", 
      "VEC_UNARY", "VEC_BINARY", "VEC_TERNARY", "VEC_TEST", "VEC_BITMASK", 
      "VEC_SHIFT", "VEC_SHUFFLE", "VEC_SPLAT", "VEC_EXTRACT", "VEC_REPLACE", 
      "MEMORY_SIZE", "MEMORY_GROW", "MEMORY_FILL", "MEMORY_COPY", "MEMORY_INIT", 
      "TYPE", "FUNC", "START_", "PARAM", "RESULT", "LOCAL", "GLOBAL", "TABLE", 
      "MEMORY", "ELEM", "DATA", "OFFSET", "IMPORT", "EXPORT", "DECLARE", 
      "ITEM", "TAG", "MODULE", "BIN", "QUOTE", "EITHER", "THREAD", "WAIT", 
      "SCRIPT", "REGISTER", "INVOKE", "GET", "ASSERT_MALFORMED", "ASSERT_INVALID", 
      "ASSERT_UNLINKABLE", "ASSERT_RETURN", "ASSERT_EXCEPTION", "ASSERT_TRAP", 
      "ASSERT_EXHAUSTION", "INPUT", "OUTPUT", "NAN_", "VAR", "SPACE", "COMMENT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  watparserParserStaticData = staticData.release();
}

}

WatParser::WatParser(TokenStream *input) : WatParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

WatParser::WatParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  WatParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *watparserParserStaticData->atn, watparserParserStaticData->decisionToDFA, watparserParserStaticData->sharedContextCache, options);
}

WatParser::~WatParser() {
  delete _interpreter;
}

const atn::ATN& WatParser::getATN() const {
  return *watparserParserStaticData->atn;
}

std::string WatParser::getGrammarFileName() const {
  return "WatParser.g4";
}

const std::vector<std::string>& WatParser::getRuleNames() const {
  return watparserParserStaticData->ruleNames;
}

const dfa::Vocabulary& WatParser::getVocabulary() const {
  return watparserParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView WatParser::getSerializedATN() const {
  return watparserParserStaticData->serializedATN;
}


//----------------- ValueContext ------------------------------------------------------------------

WatParser::ValueContext::ValueContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* WatParser::ValueContext::INT() {
  return getToken(WatParser::INT, 0);
}

tree::TerminalNode* WatParser::ValueContext::FLOAT() {
  return getToken(WatParser::FLOAT, 0);
}


size_t WatParser::ValueContext::getRuleIndex() const {
  return WatParser::RuleValue;
}

void WatParser::ValueContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WatParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterValue(this);
}

void WatParser::ValueContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WatParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitValue(this);
}


std::any WatParser::ValueContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<WatParserVisitor*>(visitor))
    return parserVisitor->visitValue(this);
  else
    return visitor->visitChildren(this);
}

WatParser::ValueContext* WatParser::value() {
  ValueContext *_localctx = _tracker.createInstance<ValueContext>(_ctx, getState());
  enterRule(_localctx, 0, WatParser::RuleValue);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(194);
    _la = _input->LA(1);
    if (!(_la == WatParser::INT

    || _la == WatParser::FLOAT)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- NameContext ------------------------------------------------------------------

WatParser::NameContext::NameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* WatParser::NameContext::STRING_() {
  return getToken(WatParser::STRING_, 0);
}


size_t WatParser::NameContext::getRuleIndex() const {
  return WatParser::RuleName;
}

void WatParser::NameContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WatParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterName(this);
}

void WatParser::NameContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WatParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitName(this);
}


std::any WatParser::NameContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<WatParserVisitor*>(visitor))
    return parserVisitor->visitName(this);
  else
    return visitor->visitChildren(this);
}

WatParser::NameContext* WatParser::name() {
  NameContext *_localctx = _tracker.createInstance<NameContext>(_ctx, getState());
  enterRule(_localctx, 2, WatParser::RuleName);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(196);
    match(WatParser::STRING_);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Null_optContext ------------------------------------------------------------------

WatParser::Null_optContext::Null_optContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* WatParser::Null_optContext::NULL_() {
  return getToken(WatParser::NULL_, 0);
}


size_t WatParser::Null_optContext::getRuleIndex() const {
  return WatParser::RuleNull_opt;
}

void WatParser::Null_optContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WatParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterNull_opt(this);
}

void WatParser::Null_optContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WatParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitNull_opt(this);
}


std::any WatParser::Null_optContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<WatParserVisitor*>(visitor))
    return parserVisitor->visitNull_opt(this);
  else
    return visitor->visitChildren(this);
}

WatParser::Null_optContext* WatParser::null_opt() {
  Null_optContext *_localctx = _tracker.createInstance<Null_optContext>(_ctx, getState());
  enterRule(_localctx, 4, WatParser::RuleNull_opt);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(199);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == WatParser::NULL_) {
      setState(198);
      match(WatParser::NULL_);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Heap_typeContext ------------------------------------------------------------------

WatParser::Heap_typeContext::Heap_typeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* WatParser::Heap_typeContext::ANY() {
  return getToken(WatParser::ANY, 0);
}
